# pii-skills-ablation-study

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
config/: pii_label_to_piicodex.json  rr_baselines.yaml  rr_fp16.yaml  rr_scaling.yaml
docs/: PROMPTS_AND_CONFIG.md
lib/ablation_harness/: __init__.py  __main__.py  cli.py  config.py  model.py  runner.py
lib/ablation_harness/loops/: __init__.py  direct_tool.py  single_turn.py  skill_discovery.py
lib/ablation_harness/parsing/: __init__.py  json_response.py
lib/ablation_harness/scoring/: __init__.py  confidence.py  metrics.py  normalize.py
lib/ablation_harness/tools/: __init__.py  base.py  detection.py  registry.py
lib/skill_agent/: __init__.py  adapters.py  agent.py  config.py  harness_adapter.py  registry.py  tool_parsing.py
notebooks/: 01_data_prep.ipynb  02_ablation_study.ipynb  03_analyses_main.ipynb  03_analyses_pilot.ipynb  04_analyses_r&r.ipynb
prompts/: __init__.py  cot.txt  few_shot.txt  skill_workflow.txt  with_docs.txt  with_skills.txt  with_tools.txt  zero_shot.txt
scripts/: make_samples.py  rebuild_results_hub.py  run_rr.sh  upload_results_to_hub.py
skills/pii-detection/: SKILL.md
tests/: conftest.py  test_detection.py  test_loops.py  test_parsing.py  test_runner.py  test_scoring.py
tests/fixtures/: sample_data.json  sample_responses.json
