[project]
name = "pii-skills-ablation-study"
version = "0.1.0"
description = "Code and analysis notebooks used in the research paper titled Asymmetry, Not Capability: Evaluation Shapes Tool-Augmented PII Detection in Small Language Models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.7",
    "typer>=0.12.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "mlx>=0.30.5",
    "mlx-lm>=0.30.6",
    "pandas>=1.4.4,<3.0.0",
    "plotly>=5.0.0",
    "pii-codex[detections]>=0.6.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "rich>=13.0.0",
    "black[jupyter]>=26.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.uv.sources]
pii-codex = { path = "../pii-codex" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
